Change URL scheme to https

--- a/README.in
+++ b/README.in
@@ -1,1 +1,1 @@
-For more information on this software please, visit http://www.netlib.org/blas/
+For more information on this software please, visit https://www.netlib.org/blas/
